  example "END = ").  This resulted in a cryptic traceback.  Now headers like
  this will detect "clearly intended" END cards and produce a warning about
  their invalidity and fix them. (#217)

- Allowed a sequence of ``Column`` objects to be passed in as the main
  argument to ``FITS_rec.from_columns`` as the documentation suggests should
  be possible.


3.1.4 (unreleased)
------------------

- Added missing features from the ``Header.insert()`` method that were
  intended for inclusion in the original 3.1 release:  In addition to
  accepting an integer index as the first argument, it also supports supplying
  a keyword name as the first argument for insertion relative to a specific
  keyword.  It also now supports an optional ``after`` argument.  If
  ``after=True`` the the insertion is made below the insertion point instead
  of above it. (Backported from 3.2.1)

- A grab bag of minor performance improvements in headers.
  (Backported from 3.2.1)

- Fixed an issue where opening an image containing pseudo-unsigned integers
  and immediately writing it to a new file using the ``writeto`` method would
  drop the scale factors that identified the data as unsigned.
  (Backported from 3.2.1)

- Fixed a bug where writing a file with ``checksum=True`` did not add the
  checksum on new files. (Backported from 3.2.1)

- Fixed an issue where validating an HDU's checksums removed the checksum from
  that HDU's header entirely (even if it was valid.)
  (Backported from 3.2.1)

- Fixed an issue where the size of the heap was sometimes not computed
  properly when writing an existing table containing variable-length array
  columns to a new FITS file.  This could result in corruption in the new FITS
  file. (Backported from 3.2.1)

- Fixed a bug where a boolean value of ``True`` in a header could not be
  replaced with the integer 1, and likewise for ``False`` and 0 and vice
  versa. (Backported from 3.2.1)
